--- a/src/main/resources/static/css/pricing.css
+++ b/src/main/resources/static/css/pricing.css
@@ -226,6 +226,14 @@ html:has(.popup:not(.popup_hidden)) {
     margin: 20px 0;
 }
 
+.info .info__block .info__block__list .info__block__list__item.info__block__list__item_extra {
+    margin-top: 60px;
+}
+
+.info .info__block .info__block__list .info__block__list__item .info__block__list__item__gray {
+    color: lightgray;
+}
+
 .info .info__block .info__block__footer {
     width: 100%;
     display: flex;
@@ -255,15 +263,13 @@ html:has(.popup:not(.popup_hidden)) {
     display: flex;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.05);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.3) 8.85%, #ffffff 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     font-size: 18rem;
     font-weight: 800;
     text-transform: uppercase;
     cursor: pointer;
     outline: none;
     transition: border 0.2s ease;
+    color: lightgray;
 }
 
 .button:hover {
@@ -313,8 +319,14 @@ a {
     margin-top: 40px;
     font-size: 9rem;
     font-weight: 400;
-    text-align: end;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.footer__mark span {
+    width: 50%;
 }
 
 .popup {
